# JenkinsTest

./: Dockerfile  Makefile  pyproject.toml
src/: main.py
src/service/: calc.py
src/tests/test_service/: test_calc.py
