[tool.poetry]
name = "jenkinstest"
version = "0.1.0"
description = ""
authors = ["artem <artem2004920@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.7"

[tool.ruff]
line-length = 90
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
